Closed Bug 1666338 Opened 4 years ago Closed 4 years ago

Finish0RTT should not always reset Http3Stream sates

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox83 --- fixed

People

(Reporter: dragana, Assigned: dragana)

References

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

No description provided.

This may be the fix for bug 1666327.

Pushed by ddamjanovic@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8ad5c9c5afb6
Do not reset the Http3Stream state if 0RTT was accepted. r=necko-reviewers,valentin
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: