Bug 1666338 - Do not reset the Http3Stream state if 0RTT was accepted. r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D90911